tests/sksl/errors/ReservedNameStatic.glsl
### Compilation failed:

error: 1: name 'static' is reserved
int static;
    ^^^^^^
1 error
